samples/_failures_safe/1761366201_887d44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e770abdb.c: In function ‘main’:
./samples/SAFE/__tmp_e770abdb.c:180:17: error: expected declaration or statement at end of input
  180 |                 size_t len = strlen(data_input);
      |                 ^~~~~~
./samples/SAFE/__tmp_e770abdb.c:180:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e770abdb.c:180:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e770abdb.c:180:17: error: expected declaration or statement at end of input
